[package]
name = "hxa"
version = "0.1.0"
edition = "2018"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dev-dependencies]
env_logger = "0.9.0"
glam = "0.18.0"
pollster = "0.2.4"
rend3 = "0.1.0"
rend3-pbr = "0.1.0"
winit = "0.25.0"
